# PaceM

./: .coverage  .gitignore  Dockerfile  Dockerfile.base  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  setup.sh
.github/workflows/: run_tests.yml
apps/backend/: Dockerfile.backend  main.py  start.sh
apps/backend/tests/: test_main.py
apps/mobile/: app.json  package.json
