[tool.poetry]
name = "pacem"
version = "0.1.0"
description = ""
authors = ["rally.lin@duke.edu"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]

python = "^3.11"
uvicorn = "^0.30.0"
fastapi = "^0.116.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

